[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]
members = [ "consensus", "database", "executor", "network", "node", "payload","pint", "primitives", "provider", "transaction_pool"]
default-members = ["pint"]

[workspace.dependencies]
primitives = { path = "primitives" }
provider = { path = "provider" }
database = { path = "database" }
transaction_pool = { path = "transaction_pool" }
executor = { path = "executor" }
payload = { path = "payload" }
network = { path = "network" }
consensus = { path = "consensus" }
node = { path = "node" }

tokio = { version = "1.0.7", features = ["full"] }
tokio-stream = "0.1.17"
parking_lot = { version =  "0.12.4" }
