[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
resolver = "3"

[workspace]
members = [ "consensus", "database", "network", "node", "payload","pint", "primitives", "provider", "transaction_pool"]
default-members = ["pint"]

[workspace.dependencies]
primitives = { path = "primitives" }
provider = { path = "provider" }
database = { path = "database" }
transaction_pool = { path = "transaction_pool" }
payload = { path = "payload" }
network = { path = "network" }
consensus = { path = "consensus" }
node = { path = "node" }

serde_json = { version = "1.0.140" }
serde = { version = "1.0.128", features = ["derive"] }
tokio = { version = "1.0.7", features = ["full"] }
tokio-stream = "0.1.17"
parking_lot = { version =  "0.12.4" }
sha2 = "0.10.9"
hex = "0.4.3"
